feat: add get container logs method for docker api client